apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  tls:
    - hosts:
        - sonarr.needless.info
      secretName: sonarr-tls
  rules:
    - host: sonarr.needless.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
